--- a/invoice/package.json
+++ b/invoice/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.1",
     "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
