--- a/invoice/package.json
+++ b/invoice/package.json
@@ -17,7 +17,8 @@
     "jspdf-autotable": "^5.0.7",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.18",
